fixing inventories scrollbar and fixing some alignment styles for inventories, adjusted slideshow fade in-out and added some background shadows to images

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -76,7 +76,7 @@ header#header {
         text-align: center;
         width: 100px;
         margin-right: 15px;
-        height: 33px;
+        height: 37px;
 
         a {
           color: #ae8d55;
@@ -247,7 +247,12 @@ section#page.gallery {
       li {
         img {
           max-width: 600px;
-          max-height: 600px;
+          max-height: 500px;
+          border: 1px solid #0e304b;
+          -moz-box-shadow:    2px 2px 3px #0e304b;
+          -webkit-box-shadow: 2px 2px 3px #0e304b;
+          box-shadow:         2px 2px 3px #0e304b;
+
         }
       }
     }
@@ -269,7 +274,7 @@ section#page.gallery {
       }
 
       .arrow {
-        top: 7px;
+        top: 0px;
       }
     }
   }
@@ -294,13 +299,18 @@ section#page.inventory {
   position: relative;
   padding-top: 20px;
 
-  a.back_to_inventories {
-    position: absolute;
-    bottom: 47px;
-    left: 602px;
-    font-size: 13px;
-    color: #ccc6c6;
+  div.return_to_inv {
+    margin-left: 200px;
+    text-align: center;
+    margin-top: 83px;
+    margin-left: 540px;
+    width: 295px;
+    a.back_to_inventories {
+      font-size: 13px;
+      color: #ccc6c6;
+    }
   }
+
   a.prev {
     background: url('left.png') no-repeat;
     text-indent: -9999px;
@@ -379,12 +389,18 @@ section#page.inventory {
     width: 596;
     margin-left: 385px;
 
-    h4 {
-      margin-left: 235px;
+    div.title_bar {
+      margin-left: 200px;
+      width: 190px;
+      text-align: center;
       padding-top: 7px;
-      font-size: 13px;
-      color: white;
-      margin-bottom: 6px;
+
+      h4 {
+        margin: 0px; padding: 0px;
+        font-size: 13px;
+        color: white;
+        margin-bottom: 6px;
+      }
     }
 
     #inventory_gallery {
